<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Formulaire"
    android:background="@drawable/background">

<ImageView
android:id="@+id/register_applogo"
android:layout_width="303dp"
android:layout_height="135dp"
android:layout_alignParentTop="true"
android:layout_alignParentEnd="true"
android:layout_alignParentRight="true"
android:layout_marginTop="67dp"
android:layout_marginEnd="60dp"
android:layout_marginRight="60dp"
android:src="@drawable/karyacom" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:hint="@string/nom"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/txtphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtname"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="15dp"
        android:hint="@string/telephone"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/txtlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtphone"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:hint="@string/Periode_location"
        android:inputType="date"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/txtFamille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtlocation"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:hint="@string/Nombre_Famille"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFamille"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_button"
        android:padding="17dp"
        android:text="@string/Ajouter"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>